--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 .container{
     width: 100%;
-    min-height: 100vh;
+    min-height: 96vh;
     background: linear-gradient(1deg, #153677,#4e085f);
     padding: 10px;
 }
@@ -118,4 +118,13 @@ ul li span{
 }
 ul li span:hover{
     background: #edeef0;
+}
+
+footer {
+    height: 4vh;
+    background: linear-gradient(1deg, #153677,#4e085f);
+}
+footer p{
+text-align: center;
+color: #edeed0;
 }
